<resources>
    <string name="app_name">AndroidCertificationContent</string>
    <string name="title_lifecycle_module">Lifecycle module</string>
    <string name="summary_activity_lifecycle">This module refer to Activity Lifecycle</string>
    <string name="lifecycle_observer_module">Lifecycle Observer</string>
    <string name="widgets_module">Widgets Module</string>
    <string name="title_basic_of_widgets">Basic of Widgets</string>
    <string name="image_view_content_description">This is an image with android icon</string>
    <string name="summary_toast_basic_widgets">Congrats, you just activated the onClick method from %1$s</string>
    <string name="title_coroutines_module">Coroutines module</string>
    <string name="title_principal_team">TEAM A</string>
    <string name="title_secondary_team">TEAM B</string>
    <string name="title_add_point">+ 1 Point</string>
    <string name="title_view_model_module">View Model Module</string>
</resources>