<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/lifecycle_module"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_lifecycle_module"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lifecycle_observer_module"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lifecycle_observer_module"
        app:layout_constraintStart_toEndOf="@+id/lifecycle_module"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/widgets_module"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widgets_module"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifecycle_module" />

    <Button
        android:id="@+id/coroutines_module"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title_coroutines_module"
        app:layout_constraintStart_toEndOf="@+id/widgets_module"
        app:layout_constraintTop_toBottomOf="@+id/lifecycle_module" />

    <Button
        android:id="@+id/viewmodel_module"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_view_model_module"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widgets_module" />
</androidx.constraintlayout.widget.ConstraintLayout>